corrected spacing

--- a/web_dynamic/static/styles/3-header.css
+++ b/web_dynamic/static/styles/3-header.css
@@ -9,13 +9,15 @@ header .logo {
     left: 20px;
     height: 100%;
 }
-header .api_status {
-    background: #CCCCCC;
-    right: 30px;
-    border-radius: 50%;
+header div#api_status {
+    float: right;
+    margin-top: 15px;
+    margin-right: 30px;
     height: 40px;
     width: 40px;
+    border-radius: 50%;
+    background: #CCCCCC;
 }
-.available {
+header div#api_status.available {
     background: #ff545f;
 }
